3-devtools/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: devtools
spec:
  selector:
    app: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: 80
