3-devtools/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: devtools
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
